--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.alugagem</groupId>
-  <artifactId>spring_tomcat_jetty_jboss</artifactId>
+  <artifactId>6126_encryption_email</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
     <properties>
         <spring.version>4.1.0.RELEASE</spring.version>
+        <jetty.version>9.0.6.v20130930</jetty.version>
     </properties>
     <dependencies>
         <dependency>
@@ -28,6 +29,11 @@
             <artifactId>mail</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
     </dependencies>
     <build>
       <sourceDirectory>src</sourceDirectory>
@@ -46,6 +52,14 @@
           <configuration>
             <warSourceDirectory>WebContent</warSourceDirectory>
             <failOnMissingWebXml>false</failOnMissingWebXml>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>${jetty.version}</version>
+          <configuration>
+            <jettyXml>jetty.xml,jetty-http.xml,jetty-ssl.xml,jetty-https.xml</jettyXml>
           </configuration>
         </plugin>
         <plugin>
