--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
     		<groupId>org.springframework.security</groupId>
     		<artifactId>spring-security-core</artifactId>
     	</dependency>
+    	<dependency>
+		    <groupId>com.microsoft.sqlserver</groupId>
+		    <artifactId>mssql-jdbc</artifactId>
+		</dependency>
     </dependencies>
     
     <repositories>
